service-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-deployment
  labels:
    app: service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: bkservice
        image: bkservice
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-1-svc
spec:
  selector:
    app: service-1
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
