ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service-1-svc
                port:
                  number: 8080
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service-2-svc
                port:
                  number: 8080
